Add shuffling and addition cards to the end and beginning

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     </header>
     <body onload="onLoad()">
         <div class="btn-container">
-            <button id="add-btn">add</button>
+            <button id="add-start-btn">add</button>
+            <button id="add-end-btn">add end</button>
+            <button id="shuffle-btn">shuffle</button>
         </div>
         <div class="cards-container" id="card-list">
             <!-- <div class="card">
